tests/baselines/reference/genericCallWithTupleType.errors.txt
genericCallWithTupleType.ts(13,1): error TS2322: Type '[string, number, boolean, boolean]' is not assignable to type '[string, number]'.
  Source has 4 element(s) but target allows only 2.
genericCallWithTupleType.ts(14,20): error TS2493: Tuple type '[string, number]' of length '2' has no element at index '2'.
genericCallWithTupleType.ts(15,1): error TS2322: Type '{ a: string; }' is not assignable to type 'undefined'.
genericCallWithTupleType.ts(15,11): error TS2493: Tuple type '[string, number]' of length '2' has no element at index '3'.
genericCallWithTupleType.ts(16,20): error TS2493: Tuple type '[string, number]' of length '2' has no element at index '3'.
genericCallWithTupleType.ts(23,14): error TS2322: Type 'number' is not assignable to type 'string'.
genericCallWithTupleType.ts(23,17): error TS2322: Type 'string' is not assignable to type 'number'.
genericCallWithTupleType.ts(24,14): error TS2322: Type '{}' is not assignable to type 'string'.
genericCallWithTupleType.ts(24,18): error TS2322: Type '{}' is not assignable to type 'number'.
genericCallWithTupleType.ts(25,1): error TS2322: Type '[{}]' is not assignable to type '[{}, {}]'.
  Source has 1 element(s) but target requires 2.


==== genericCallWithTupleType.ts (10 errors) ====
    interface I<T, U> {
        tuple1: [T, U];
    } 
    
    var i1: I<string, number>;
    declare var i1: I<string, number>;
    declare var i2: I<{}, {}>;
    
    // no error
    i1.tuple1 = ["foo", 5];
    var e1 = i1.tuple1[0];  // string
    var e2 = i1.tuple1[1];  // number
    i1.tuple1 = ["foo", 5, false, true];
    ~~~~~~~~~
!!! error TS2322: Type '[string, number, boolean, boolean]' is not assignable to type '[string, number]'.
!!! error TS2322:   Source has 4 element(s) but target allows only 2.
    var e3 = i1.tuple1[2];  // {}
                       ~
!!! error TS2493: Tuple type '[string, number]' of length '2' has no element at index '2'.
    i1.tuple1[3] = { a: "string" };
    ~~~~~~~~~~~~
!!! error TS2322: Type '{ a: string; }' is not assignable to type 'undefined'.
              ~
!!! error TS2493: Tuple type '[string, number]' of length '2' has no element at index '3'.
    var e4 = i1.tuple1[3];  // {}
                       ~
!!! error TS2493: Tuple type '[string, number]' of length '2' has no element at index '3'.
    i2.tuple1 = ["foo", 5];
    i2.tuple1 = ["foo", "bar"];
    i2.tuple1 = [5, "bar"];
    i2.tuple1 = [{}, {}];
    
    // error
    i1.tuple1 = [5, "foo"];
                 ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                    ~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    i1.tuple1 = [{}, {}];
                 ~~
!!! error TS2322: Type '{}' is not assignable to type 'string'.
                     ~~
!!! error TS2322: Type '{}' is not assignable to type 'number'.
    i2.tuple1 = [{}];
    ~~~~~~~~~
!!! error TS2322: Type '[{}]' is not assignable to type '[{}, {}]'.
!!! error TS2322:   Source has 1 element(s) but target requires 2.
    